v1.1: ????
* Parsing algorithm changed to strip TAG blocks
* Added optional TAG-based timestamping
* Added optional TAG-based source identifiers
* Added GoFree support
* Added loopback option
* Added keepalive options to tcp interfaces
* Added more supported baud rates for serial and pty interfaces
* More consistent interface specifiers for broadcast and multicast
* Corrected bug in default port assignment for broadcast interfaces
* Fixed bugs in tcp persist code

v1.0: 31st August 2013
* Added multicast support
* Added "persist" and "retry" options for tcp client interfaces
* Added support for rate limiting
* Disable Nagle algorithm on tcp interfaces
* Fix bug in appending to non-existent files
* Fix hang when configuration with no inputs specified
* Corrected multiple typos in README

v0.2.11: 25th June 2013
* Fixed error with seatalk flag in serial.c
* Fixed makefile for bsd/macos
* Improved error reporting for broadcast interfaces
* Fix failure-to-exit bug when using tcp server
* Special handling of and improved support for FIFOs
* Ignore SIGPIPE to avoid crashes writing to FIFOs
* Added append mode for output files
* Enable use of redirected standard input and output in background mode
* Added persist flag for FIFOs
* Added eol option for \r\n line termination with file interfaces
* Make file output line buffered
* Reduce max sentence size to the 80 chars it was always meant to be
* Fixed tcp server filter inheritace bug
* Fixed bug resulting in qsize option being ignored for tcp and serial

v0.2.10: 31st March 2013
* Fixed crash when interface error condition encountered on startup

v0.2.9: 4th March 2013
* Fixed bug with input interfaces exiting before output startup
* Updated documentation to correctly describe use of "device" option
* Fixed segv in file error handling
* Fixed crash with input-only tcp servers
* Added "-V" flag for version identification

v0.2.8: 16th January 2013
* Fixed bug in shutdown of bi-directional tcp server